# Machine-Learning-In-Computer-Vision

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test_PR.yml  test_Push.yml
src/MachineLearninginComputerVision/: demo.py  web.py
src/MachineLearninginComputerVision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/MachineLearninginComputerVision/core/: config.py  utils.py
tests/: test_demo.py
