[tool.black]
line-length=109
target-version=["py36","py37","py38","py39"]
include='\.pyi?$'
exclude='''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | asset
)/
'''

[tool.isort]
profile="black"
line_length=109
force_sort_within_sections="False"
order_by_type="False"

[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"
