[metadata]
license_files=LICENSE

[options.data_files]
.=requirements.txt
  README.md
  
[flake8]
max-line-length=109
exclude=.git,__pycache__,build,dist
ignore=I101,I201,F401,F403,S001,D100,D101,D102,D103,D104,D105,D106,D107,D200,D205,D400,W504,D202,D203,E203,W503,B006
inline-quotes="
max-complexity=10
