[metadata]
license_files=LICENSE

[options.data_files]
.=requirements.txt
  README.md

[options.extras_require]
testing=
    black==23.1.0
    isort==5.12.0
    flake8==6.0.0
    pytest==7.2.1
    pytest-cov==4.0.0
    tox==4.4.6

[flake8]
max-line-length=109
exclude=.git,__pycache__,build,dist
ignore=I101,I201,F401,F403,S001,D100,D101,D102,D103,D104,D105,D106,D107,D200,D205,D400,W504,D202,D203,E203,W503,B006
inline-quotes="
max-complexity=10
